--- a/CRM/CalendarTasks.xaml
+++ b/CRM/CalendarTasks.xaml
@@ -1,61 +1,22 @@
 ﻿<Window x:Class="CRM.CalendarTasks"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="CalendarTasks" Height="300" Width="300">
-    <Grid>
-        <Page
-  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-            <Page.Resources>
-                <XmlDataProvider x:Key="Data">
-                    <x:XData>
-                        <Data xmlns="">
-                            <Item Row="0" Column="0" Data="0,0"/>
-                            <Item Row="1" Column="1" Data="1,1"/>
-                            <Item Row="2" Column="1" Data="2,1"/>
-                            <Item Row="3" Column="2" Data="3,2"/>
-                            <Item Row="4" Column="4" Data="4,4"/>
-                            <Item Row="4" Column="3" Data="4,3"/>
-                        </Data>
-                    </x:XData>
-                </XmlDataProvider>
-            </Page.Resources>
-            <DockPanel>
-                <ItemsControl ItemsSource="{Binding Source={StaticResource Data}, XPath=/Data/Item}">
-                    <ItemsControl.ItemsPanel>
-                        <ItemsPanelTemplate>
-                            <Grid>
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="50"/>
-                                    <ColumnDefinition Width="50"/>
-                                    <ColumnDefinition Width="50"/>
-                                    <ColumnDefinition Width="50"/>
-                                    <ColumnDefinition Width="50"/>
-                                </Grid.ColumnDefinitions>
-                                <Grid.RowDefinitions>
-                                    <RowDefinition Height="30"/>
-                                    <RowDefinition Height="30"/>
-                                    <RowDefinition Height="30"/>
-                                    <RowDefinition Height="30"/>
-                                    <RowDefinition Height="30"/>
-                                </Grid.RowDefinitions>
-                            </Grid>
-                        </ItemsPanelTemplate>
-                    </ItemsControl.ItemsPanel>
-                    <ItemsControl.ItemContainerStyle>
-                        <Style TargetType="ContentPresenter">
-                            <Setter Property="Grid.Row" Value="{Binding XPath=@Row}"/>
-                            <Setter Property="Grid.Column" Value="{Binding XPath=@Column}"/>
-                        </Style>
-                    </ItemsControl.ItemContainerStyle>
-                    <ItemsControl.ItemTemplate>
-                        <DataTemplate>
-                            <TextBox Text="{Binding XPath=@Data, Mode=TwoWay}"/>
-                        </DataTemplate>
-                    </ItemsControl.ItemTemplate>
-                </ItemsControl>
-            </DockPanel>
-        </Page>
-
+        Title="CalendarTasks" Height="300" Width="402">
+    <Grid HorizontalAlignment="Left" Width="392">
+        <DataGrid AutoGenerateColumns="False" 
+          Height="270" 
+          HorizontalAlignment="Left" 
+          Name="dataGrid1" 
+          VerticalAlignment="Top" 
+          Width="382">
+            <DataGrid.Columns >
+                <DataGridTextColumn Binding="{Binding Path=A}" MinWidth="60" />
+                <DataGridTextColumn Binding="{Binding Path=B}" MinWidth="60" />
+                <DataGridTextColumn Binding="{Binding Path=C}" MinWidth="60" />
+                <DataGridTextColumn Binding="{Binding Path=D}" MinWidth="60" />
+                <DataGridTextColumn Binding="{Binding Path=E}" MinWidth="60" />
+                <DataGridTextColumn Binding="{Binding Path=F}" MinWidth="60" />
+            </DataGrid.Columns>
+        </DataGrid>
     </Grid>
 </Window>
