--- a/CRM/NewClient.xaml
+++ b/CRM/NewClient.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Name="wNewClient" x:Class="CRM.NewClient"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="New Client Addition" Height="574.3" Width="586" WindowStartupLocation="CenterOwner" ScrollViewer.VerticalScrollBarVisibility="Disabled" ResizeMode="NoResize">
+        Title="New Client Addition" Height="574.3" Width="586" WindowStartupLocation="CenterScreen" ScrollViewer.VerticalScrollBarVisibility="Disabled" ResizeMode="NoResize">
     <Grid Margin="0,0,-6,0">
         <Label Content="NEW   CLIENT" HorizontalAlignment="Left" Margin="229,0,0,0" VerticalAlignment="Top" FontSize="16" Foreground="#FF0E52A2"/>
         <Label Content="Client Name" HorizontalAlignment="Left" Margin="16,35,0,0" VerticalAlignment="Top"/>
@@ -35,7 +35,6 @@
         <DatePicker x:Name="dpFirstContact" HorizontalAlignment="Left" Margin="413,443,0,0" VerticalAlignment="Top" Width="141" />
         <!--SelectedDateChanged="DatePicker_SelectedDateChanged"-->
         <Button x:Name="btAdd" Content="ADD" HorizontalAlignment="Left" Margin="16,486,0,0" VerticalAlignment="Top" Width="160" Foreground="#FF055905" Click="btAdd_Click" Height="39"/>
-        <Button x:Name="btClear" Content="CLEAR" HorizontalAlignment="Left" Margin="206,486,0,0" VerticalAlignment="Top" Width="160" Foreground="#FFC11919" Click="btClear_Click" Height="39"/>
         <Button x:Name="btClose" Content="CLOSE" HorizontalAlignment="Left" Margin="394,486,0,0" VerticalAlignment="Top" Width="160" Foreground="#FFC11919" Click="btClose_Click" Height="39"/>
         <Label x:Name="label" Content="*" HorizontalAlignment="Left" Margin="93,36,0,0" VerticalAlignment="Top" Foreground="#FFD40C0C" FontSize="16"/>
         <Label x:Name="label_Copy" Content="*" HorizontalAlignment="Left" Margin="389,36,0,0" VerticalAlignment="Top" Foreground="#FFD40C0C" FontSize="16"/>
