--- a/CRM/NewContact.xaml
+++ b/CRM/NewContact.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Name="wNewContact" x:Class="CRM.NewContact"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="New Contact" Height="464" Width="446" WindowStartupLocation="CenterOwner" ResizeMode="NoResize">
+        Title="New Contact" Height="464" Width="446" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
     <Grid>
         <Label Content="NEW   CONTACT" HorizontalAlignment="Left" Margin="158,0,0,0" VerticalAlignment="Top" FontSize="16" Foreground="#FF0E52A2"/>
         <Label Content="Client Name" HorizontalAlignment="Left" Margin="16,35,0,0" VerticalAlignment="Top"/>
