--- a/CRM/NewProduct.xaml
+++ b/CRM/NewProduct.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="CRM.NewProduct"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="NewProduct" Height="464" Width="446" WindowStartupLocation="CenterOwner" ResizeMode="NoResize">
+        Title="NewProduct" Height="464" Width="446" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
     <Grid>
 
         <Label Content="NEW   PRODUCT" HorizontalAlignment="Left" Margin="158,0,0,0" VerticalAlignment="Top" FontSize="16" Foreground="#FF0E52A2"/>
