--- a/CRM/MainWindow.xaml
+++ b/CRM/MainWindow.xaml
@@ -1,12 +1,12 @@
 ﻿<Window x:Class="CRM.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Company name CRM system" Height="170.267" Width="313.62" WindowStartupLocation="CenterScreen" ResizeMode="NoResize"
+        Title="CRM system" Height="170.267" Width="313.62" WindowStartupLocation="CenterScreen" ResizeMode="NoResize"
         PreviewKeyDown="Window_PreviewKeyDown">
     <Grid>
         <TextBox x:Name="tbUserName" HorizontalAlignment="Left" Height="23" Margin="106,19,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="168" TabIndex="1"/>
-        <Label Content="Name" HorizontalAlignment="Left" Margin="11,15,0,0" VerticalAlignment="Top"/>
-        <Label Content="Password" HorizontalAlignment="Left" Margin="11,47,0,0" VerticalAlignment="Top"/>
+        <Label Content="Name" HorizontalAlignment="Left" Margin="11,15,0,0" VerticalAlignment="Top" Foreground="#FF1845BD"/>
+        <Label Content="Password" HorizontalAlignment="Left" Margin="11,47,0,0" VerticalAlignment="Top" Foreground="#FF1845BD"/>
         <Button x:Name="btEnter" Content="ENTER" HorizontalAlignment="Left" Margin="106,90,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click" TabIndex="3"/>
         <PasswordBox x:Name="pbPsw" HorizontalAlignment="Left" Margin="106,49,0,0" VerticalAlignment="Top" Width="168" Height="24" TabIndex="2"/>
 
